kubernetes/argo-workflow/install/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argo-server
  namespace: argo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo.cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
